--- a/public/css/partials/navbar.css
+++ b/public/css/partials/navbar.css
@@ -7,6 +7,7 @@ nav {
   width: 100%;
   background-color: var(--primary-bg);
   border: 1px solid var(--primary-border);
+  z-index: 100;
 }
 
 .logo {
@@ -25,8 +26,6 @@ nav {
   text-decoration: none;
   font-size: 14px;
 }
-
-
 
 @media (max-width: 768px) {
   .nav-links {
